# ProjectR

./: .gitignore  manage.py  pyproject.toml
ProjectR/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
React/frontend/: package-lock.json  package.json
React/frontend/public/: index.html  manifest.json
React/frontend/src/: App.css  App.js  Routes.js
React/frontend/src/containers/: CampaignDetails.js  CampaignEntry.js  CampaignList.js  CampaignWizard.js  CharacterDetails.htm.js  CharacterEntry.js  CharacterEntry.module.css  CharacterList.js  CharacterWizard.js  CharacterWizard.module.css  ChatRoom.js  Dashboard.js  Dashboard.module.css  Home.js  Home.module.css  Login.js  NotFound.js  Reloader.js
React/frontend/src/containers/campaignComponents/: GroupEntry.js  GroupForm.js  GroupMember.js  GroupPanel.js  Panel.module.css  PlayerEntry.js  PlayerPanel.js  PlayerSelector.js  Selector.module.css
React/frontend/src/containers/chatComponents/: CharacterSelector.js  ChatEntry.module.css  ChatLog.js  GroupElement.js  GroupPanel.js  Message.js  Panel.module.css  PlayerCharacters.js  (+2 more)
bard/: consumer.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
bard/migrations/: 0001_initial.py  0002_messaggio_utente.py  0003_auto_20210607_1639.py  0004_messaggio_immagine.py
character_manager/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
character_manager/migrations/: 0001_initial.py  0002_auto_20210505_1732.py  0003_alter_personaggio_note.py  0004_auto_20210529_1637.py  0005_auto_20210531_1129.py
(+23 files in other folders)
